--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div>
+  <% if current_user %>
+      Signed in as <strong><%= current_user.name %></strong>!
+      <img src="<%= current_user.image %>" alt="Facebook picture">
+      <%= link_to "Sign out", signout_path, id: "sign_out" %>
+  <% else %>
+      <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+  <% end %>
+</div>
 
 <%= yield %>
 
