--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,6 @@
-
-<script>loadFacebookSDK()</script>
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
-<div id="lee">
+<div class="cover">
+  <h1 class="cover-heading">Bandmate</h1>
+  <p id="lead1">Create your sound.</p>
+  <!-- <p id="lead2">Find your musical soul mate.</p> -->
+  <p id="lead3">Collaborate with musicians around the world.</p>
 </div>
-<script>fbMusic()</script>
