--- a/app/assets/stylesheets/welcome.scss.erb
+++ b/app/assets/stylesheets/welcome.scss.erb
@@ -1,3 +1,6 @@
+//= depend_on_asset 'record.jpg'
+//= depend_on_asset 'accordian.jpeg'
+
 body#index {
   background: url(<%= image_path 'record.jpg' %>) no-repeat;
   background-size: cover;
