--- a/app/views/user/view.html.erb
+++ b/app/views/user/view.html.erb
@@ -1,4 +1,4 @@
-<img src="<%= image_path 'guitarist.jpeg' %>" alt="frets" id="guitar">
+<img src="<%= image_path 'guitarist.jpg' %>" alt="frets" id="guitar">
 <div class="cover">
   <h1 class="cover-heading">Your Power.</h1>
 </div>
