--- a/app/assets/stylesheets/welcome.scss.erb
+++ b/app/assets/stylesheets/welcome.scss.erb
@@ -7,6 +7,6 @@ body#index {
 }
 
 body#about {
-  background: url(<%= image_path 'accordian.jpeg' %>) no-repeat;
+  background: url(<%= image_path 'accordian.jpg' %>) no-repeat;
   background-size: cover;
 }
